Bug 485496 - Can't run kwin plasma mobile with nvidia (Sub wayland session for dev)
Summary: Can't run kwin plasma mobile with nvidia (Sub wayland session for dev)
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 6.0.3
Platform: NixOS Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-13 17:58 UTC by Florian RICHER
Modified: 2024-05-16 20:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
florian.richer: Wayland+
florian.richer: NVIDIA+


Attachments
Log during command run (14.32 KB, text/plain)
2024-04-13 17:58 UTC, Florian RICHER
Details
drm_info command result (112.20 KB, text/plain)
2024-04-13 20:08 UTC, Florian RICHER
Details
wayland-info command result (64.73 KB, text/plain)
2024-04-13 20:09 UTC, Florian RICHER
Details
More information with zagg about this bug (123.76 KB, image/png)
2024-04-13 20:10 UTC, Florian RICHER
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Florian RICHER 2024-04-13 17:58:32 UTC
Created attachment 168467 [details]
Log during command run

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY

When i run this command

QT_QPA_PLATFORM=wayland dbus-run-session kwin_wayland --xwayland "plasmashell -p org.kde.plasma.mobileshell"

Nothing happens but with my laptop computer (With intel integrated GPU, it works).

I already tried 

* QT_QPA_PLATFORM=wayland dbus-run-session kwin_wayland --xwayland "plasmashell" (Not work)
* QT_QPA_PLATFORM=wayland dbus-run-session kwin_wayland --xwayland "konsole" (Not work)
* QT_QPA_PLATFORM=wayland dbus-run-session konsole (Work well)



STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT

When i run command, nothing happens

EXPECTED RESULT

This work https://invent.kde.org/plasma/plasma-mobile#test-on-a-development-machine

SOFTWARE/OS VERSIONS
NixOS : https://github.com/NixOS/nixpkgs/tree/1042fd8b148a9105f3c0aca3a6177fd1d9360ba5/pkgs/kde
Linux : 6.8.4-zen1
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3

ADDITIONAL INFORMATION

Graphics Card : NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 or NVIDIA GeForce RTX 2070 Max-Q
NVIDIA : 550.67
SESSION : Wayland
Comment 1 Florian RICHER 2024-04-13 18:04:07 UTC
src/gbm\_drv\_common.c:130: GBM-DRV error (get\_bytes\_per\_component): Unknown or not supported format: 808669784
src/gbm\_drv\_common.c:130: GBM-DRV error (get\_bytes\_per\_component): Unknown or not supported format: 808669784

808669784 => DRM_FORMAT_XRGB2101010
Comment 2 Florian RICHER 2024-04-13 19:25:02 UTC
(In reply to Florian RICHER from comment #1)
> src/gbm\_drv\_common.c:130: GBM-DRV error (get\_bytes\_per\_component):
> Unknown or not supported format: 808669784
> src/gbm\_drv\_common.c:130: GBM-DRV error (get\_bytes\_per\_component):
> Unknown or not supported format: 808669784
> 
> 808669784 => DRM_FORMAT_XRGB2101010

Just a note from previous debug with zagg
Comment 3 Florian RICHER 2024-04-13 19:29:04 UTC
(In reply to Florian RICHER from comment #2)
> (In reply to Florian RICHER from comment #1)
> > src/gbm\_drv\_common.c:130: GBM-DRV error (get\_bytes\_per\_component):
> > Unknown or not supported format: 808669784
> > src/gbm\_drv\_common.c:130: GBM-DRV error (get\_bytes\_per\_component):
> > Unknown or not supported format: 808669784
> > 
> > 808669784 => DRM_FORMAT_XRGB2101010
> 
> Just a note from previous debug with zagg

https://matrix.to/#/!xdwRmYgjAuZSEhsheE:kde.org/$LZQdcr_ikww_hzelMka_EvSCiLbVheVQW__WfCZFXAw
Comment 4 Florian RICHER 2024-04-13 20:08:52 UTC
Created attachment 168471 [details]
drm_info command result
Comment 5 Florian RICHER 2024-04-13 20:09:32 UTC
Created attachment 168472 [details]
wayland-info command result
Comment 6 Florian RICHER 2024-04-13 20:10:46 UTC
Created attachment 168473 [details]
More information with zagg about this bug
Comment 7 Bug Janitor Service 2024-05-16 10:59:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5741
Comment 8 Vlad Zahorodnii 2024-05-16 12:53:00 UTC
Git commit 9af15a979dc6d5136506c50321ab806cb252f624 by Vlad Zahorodnii.
Committed on 16/05/2024 at 12:44.
Pushed by vladz into branch 'master'.

backends/wayland: Check whether it's possible to create a swapchain with the given format+modifier

M  +6    -10   src/backends/wayland/wayland_egl_backend.cpp

https://invent.kde.org/plasma/kwin/-/commit/9af15a979dc6d5136506c50321ab806cb252f624
Comment 9 Vlad Zahorodnii 2024-05-16 13:08:46 UTC
Git commit ac7c6a315ebfc5cae4a730630d9e935f4156e06a by Vlad Zahorodnii.
Committed on 16/05/2024 at 12:59.
Pushed by vladz into branch 'Plasma/6.0'.

backends/wayland: Check whether it's possible to create a swapchain with the given format+modifier
(cherry picked from commit 9af15a979dc6d5136506c50321ab806cb252f624)

M  +6    -10   src/backends/wayland/wayland_egl_backend.cpp

https://invent.kde.org/plasma/kwin/-/commit/ac7c6a315ebfc5cae4a730630d9e935f4156e06a
Comment 10 Florian RICHER 2024-05-16 20:42:55 UTC
I confirm, it's fixed in my side with the patch
Comment 11 Florian RICHER 2024-05-16 20:43:27 UTC
Tested with

{
  description = "Kwin Test";

  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixpkgs-unstable";
    flake-utils.url = "github:numtide/flake-utils";
  };

  outputs = { self, nixpkgs, flake-utils }:
    flake-utils.lib.eachSystem flake-utils.lib.allSystems (system:
      let
        pkgs = import nixpkgs { 
	 inherit system;
          overlays = [
            (self: super: {
              kdePackages = super.kdePackages.overrideScope (kde-self: kde-super: rec {
                kwin = kde-super.kwin.overrideAttrs (oldAttrs: rec {
                  patches = oldAttrs.patches ++ [
	           ./5741.patch
                  ];
                });
              });
            })
          ];
        };
      in
      {
        devShells = rec {
          default = pkgs.mkShell {
            buildInputs = with pkgs; [
	     kdePackages.kwin
            ];
          };
        };
      });
}
Comment 12 Florian RICHER 2024-05-16 20:44:09 UTC
Nixpkgs rev b3fcfcfabd01b947a1e4f36622bbffa3985bdac6