backends/wayland: Check whether it's possible to create a swapchain with the given format+modifier

BUG: 485496